# LinkManager

./: README.ko.md  README.md  index.html  package-lock.json  package.json
docs/: README.ko.md  README.md  index.md  project-structure.ko.md  project-structure.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
