[package]
name = "link-manager"
version = "0.1.0"
description = "Windows symbolic link manager"
authors = ["LinkManager"]
edition = "2021"

[lib]
name = "link_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "link-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-opener = "2.2"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }

[dev-dependencies]
tempfile = "3.14"
